# pepr3d

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE.md  README.md  pepr3d.sln.DotSettings
.circleci/: config.yml
assets/: hotkeys.json  imgui.ini
assets/fonts/: OpenSans-Regular.license.txt
assets/models/: defaultcube.stl
assets/models/invalid/: README.md  corrupted.p3d  corrupted_crash.p3d  invalid_polyhedron.stl  invalid_sdf.stl
assets/shaders/: ModelView.frag  ModelView.vert
cmake/: FindAssimp.cmake  Findassimp.cmake
docs/: _asset_not_found_exception_8h_source.html  _assimp_progress_8h_source.html  _brush_8h_source.html  _camera_ui_8h_source.html  _cmd_color_manager_8h_source.html  _cmd_paint_brush_8h_source.html  _cmd_paint_single_color_8h_source.html  _cmd_paint_text_8h_source.html  _color_manager_8h_source.html  _command_8h_source.html  _command_manager_8h_source.html  _dialog_8h_source.html  _display_options_8h_source.html  _example_command_8h_source.html  _export_assistant_8h_source.html  _export_type_8h_source.html  _fatal_logger_8h_source.html  _font_rasterizer_8h_source.html  _font_storage_8h_source.html  _geometry_8h_source.html  _geometry_progress_8h_source.html  _geometry_utils_8h_source.html  _glm_serialization_8h_source.html  _gnuplot_debug_helper_8h_source.html  _gps__traits__adaptor_8h_source.html  _hotkeys_8h_source.html  _icons_material_design_8h_source.html  _information_8h_source.html  _light_theme_8h_source.html  _live_debug_8h_source.html  _main_application_8h_source.html  _model_exporter_8h_source.html  _model_importer_8h_source.html  _model_view_8h_source.html  _paint_bucket_8h_source.html  _polyhedron_builder_8h_source.html  _polyhedron_data_8h_source.html  _progress_indicator_8h_source.html  _sdf_values_exception_8h_source.html  _segmentation_8h_source.html  (+312 more)
docs/documentation/: docu.tex  spec.tex
docs/documentation/images/: diagram.eps  diagram_ui.eps
docs/documentation/texts/: architecture.tex  build.tex  commands.tex  conclusion.tex  first-run.tex  geometry.tex  import-export.tex  intro.tex  min-req.tex  preferences.tex  progress.tex  related-work.tex  requirements.tex  results.tex  testing.tex  tools.tex  ui.tex  user-tools.tex
docs/doxygen/: pepr3d  readme.txt
docs/doxygen/html/: _asset_not_found_exception_8h_source.html  _assimp_progress_8h_source.html  _brush_8h_source.html  _camera_ui_8h_source.html  _cmd_color_manager_8h_source.html  _cmd_paint_brush_8h_source.html  _cmd_paint_single_color_8h_source.html  _cmd_paint_text_8h_source.html  _color_manager_8h_source.html  _command_8h_source.html  _command_manager_8h_source.html  _dialog_8h_source.html  _display_options_8h_source.html  _example_command_8h_source.html  _fatal_logger_8h_source.html  _font_rasterizer_8h_source.html  _font_storage_8h_source.html  _geometry_8h_source.html  _geometry_progress_8h_source.html  _geometry_utils_8h_source.html  _hotkeys_8h_source.html  _information_8h_source.html  _light_theme_8h_source.html  _live_debug_8h_source.html  _main_application_8h_source.html  _model_exporter_8h_source.html  _model_importer_8h_source.html  _model_view_8h_source.html  _paint_bucket_8h_source.html  _polyhedron_builder_8h_source.html  _progress_indicator_8h_source.html  _sdf_values_exception_8h_source.html  (+207 more)
docs/search/: all_1.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  (+15 more)
docs/specification/: spec.tex
docs/texts/: architecture.tex  exec.tex  intro.tex  tools.tex  ui.tex  usecase.tex
documents/documentation/: docu.dvi  docu.tex  geometry_codesnips.txt
documents/doxygen/: pepr3d  readme.md
documents/specification/: .gitignore
lib/peprimgui/: peprimgui.cpp  peprimgui.h
lib/threadpool/: ThreadPool.h
resources/: Resources.rc
src/: .clang-format  Pepr3D.cpp  Pepr3D.test.inc  README.md  format-all.sh  libraries.test.cpp  main.cpp  main.test.cpp  peprassert.cpp  peprassert.h
src/commands/: CmdChangeColorManagerColor.h  CmdColorManager.h  CmdPaintBrush.h  CmdPaintSingleColor.h  CmdPaintText.h  CmdReplaceColorManagerColors.h  Command.h  CommandManager.h  CommandManager.test.cpp  ExampleCommand.h  commandManager.h  commandManager.test.cpp  main.test.cpp
src/geometry/: AssimpProgress.h  ColorManager.h  ColorManager.test.cpp  ExportType.h  ExportTypes.h  FontRasterizer.cpp  FontRasterizer.h  FontRasterizer.test.cpp  Geometry.cpp  Geometry.cpp~RF181bbfc.TMP  Geometry.cpp~RFf26a048.TMP  Geometry.h  Geometry.test.cpp  GeometryProgress.h  GeometryUtils.cpp  GeometryUtils.h  GeometryUtils.test.cpp  GlmSerialization.h  GnuplotDebugHelper.h  ModelExporter.h  ModelImporter.h  PolyhedronBuilder.h  PolyhedronData.h  SdfValuesException.h  Triangle.h  TriangleDetail.cpp  TriangleDetail.h  TriangleDetail.test.cpp  TrianglePrimitive.cpp  TrianglePrimitive.h  geometry.cpp
src/tools/: Brush.cpp  Brush.h  DIsplayOptions.h  DisplayOptions.cpp  DisplayOptions.h  ExportAssistant.cpp  ExportAssistant.h  Information.cpp  Information.h  LiveDebug.cpp  LiveDebug.h  PaintBucket.cpp  PaintBucket.h  Segmentation.cpp  Segmentation.h  SemiautomaticSegmentation.cpp  SemiautomaticSegmentation.h  Settings.cpp  Settings.h  TextEditor.cpp  TextEditor.h  Tool.cpp  Tool.h  TrianglePainter.cpp  TrianglePainter.h
src/ui/: AssetNotFoundException.h  CameraUi.cpp  CameraUi.h  Dialog.cpp  Dialog.h  FatalLogger.h  FontStorage.h  Hotkeys.h  LightTheme.h  MainApplication.cpp  MainApplication.h  ModelView.cpp  ModelView.h  ProgressIndicator.cpp  ProgressIndicator.h  SidePane.cpp  SidePane.h  Toolbar.cpp  Toolbar.h  UiStateStore.h
tests/: addMissingPoints.json  updatePolysFromTriangles.json  updateTrianglesFromPolygons.json
(+325 files in other folders)
